# nyc-curb-cv-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: analytics.py  main.py  rules_engine.py  schemas.py
app/cv/: annotator.py  detector.py  lane_detector.py  zone_analyzer.py
config/: nyc_parking_rules.yaml
dashboard/: app.py
data/: sample_results.csv
tests/: test_analyze.py  test_detector.py  test_image_api.py  test_zone_analyzer.py
